// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutSlidePanel should render when small 1`] = `
<div
  className="layout-slide-panel is-open is-overlay"
>
  <div
    aria-hidden={null}
    className="panel is-small is-animated"
  >
    <HoverTarget
      contentRefCallback={[Function]}
      hoverIsEnabled={false}
      isContentHidden={false}
      isOpen={true}
      onClick={[Function]}
      onHoverOff={[Function]}
      onHoverOn={[Function]}
      text="Test Text"
    >
      <div>
        Panel Content
      </div>
    </HoverTarget>
  </div>
  <OverlayContainer
    className="content"
  >
    <Overlay
      backgroundStyle="dark"
      isOpen={true}
      isRelativeToContainer={true}
      isScrollable={false}
      onRequestClose={[Function]}
    />
    <div>
      Child
    </div>
  </OverlayContainer>
</div>
`;

exports[`LayoutSlidePanel should render when tiny 1`] = `
<div
  className="layout-slide-panel is-open is-overlay"
>
  <div
    aria-hidden={null}
    className="panel is-tiny is-animated"
  >
    <HoverTarget
      contentRefCallback={[Function]}
      hoverIsEnabled={false}
      isContentHidden={false}
      isOpen={true}
      onClick={[Function]}
      onHoverOff={[Function]}
      onHoverOn={[Function]}
      text="Test Text"
    >
      <div>
        Panel Content
      </div>
    </HoverTarget>
  </div>
  <OverlayContainer
    className="content"
  >
    <Overlay
      backgroundStyle="dark"
      isOpen={true}
      isRelativeToContainer={true}
      isScrollable={false}
      onRequestClose={[Function]}
    />
    <div>
      Child
    </div>
  </OverlayContainer>
</div>
`;

exports[`LayoutSlidePanel should render with provided props 1`] = `
<div
  className="layout-slide-panel is-open is-overlay hover-toggle-enabled"
>
  <div
    aria-hidden={null}
    className="panel is-animated"
  >
    <HoverTarget
      contentRefCallback={[Function]}
      hoverIsEnabled={true}
      isContentHidden={false}
      isOpen={true}
      onClick={[Function]}
      onHoverOff={[Function]}
      onHoverOn={[Function]}
      text="Test Text"
    >
      <div>
        Panel Content
      </div>
    </HoverTarget>
  </div>
  <OverlayContainer
    className="content"
  >
    <Overlay
      backgroundStyle="clear"
      isOpen={true}
      isRelativeToContainer={true}
      isScrollable={false}
      onRequestClose={[Function]}
    />
    <div>
      Child
    </div>
  </OverlayContainer>
</div>
`;

exports[`LayoutSlidePanel should render without optional props 1`] = `
<div
  className="layout-slide-panel is-overlay"
>
  <div
    aria-hidden="true"
    className="panel"
  >
    <HoverTarget
      contentRefCallback={[Function]}
      hoverIsEnabled={true}
      isContentHidden={true}
      isOpen={true}
      onHoverOff={[Function]}
      onHoverOn={[Function]}
    />
  </div>
  <OverlayContainer
    className="content"
  >
    <Overlay
      backgroundStyle="clear"
      isOpen={false}
      isRelativeToContainer={true}
      isScrollable={false}
    />
  </OverlayContainer>
</div>
`;
